feature to update cart value when there is a change to the cart(add new items)
