# gen/http/payment/server/encode_decode.go
@@ -1,0 +1,92 @@
+// Code generated by goa v3.1.3, DO NOT EDIT.
+//
+// payment HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen fruitshop/design
+
+package server
+
+import (
+	"context"
+	paymentviews "fruitshop/gen/payment/views"
+	"io"
+	"net/http"
+
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// EncodeAddResponse returns an encoder for responses returned by the payment
+// add endpoint.
+func EncodeAddResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
+	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
+		res := v.(*paymentviews.PaymentManagement)
+		enc := encoder(ctx, w)
+		body := NewAddResponseBody(res.Projected)
+		w.WriteHeader(http.StatusAccepted)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeAddRequest returns a decoder for requests sent to the payment add
+// endpoint.
+func DecodeAddRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
+	return func(r *http.Request) (interface{}, error) {
+		var (
+			body AddRequestBody
+			err  error
+		)
+		err = decoder(r).Decode(&body)
+		if err != nil {
+			if err == io.EOF {
+				return nil, goa.MissingPayloadError()
+			}
+			return nil, goa.DecodePayloadError(err.Error())
+		}
+		err = ValidateAddRequestBody(&body)
+		if err != nil {
+			return nil, err
+		}
+
+		var (
+			id string
+
+			params = mux.Vars(r)
+		)
+		id = params["ID"]
+		payload := NewAddPayload(&body, id)
+
+		return payload, nil
+	}
+}
+
+// EncodeGetResponse returns an encoder for responses returned by the payment
+// get endpoint.
+func EncodeGetResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
+	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
+		res := v.(*paymentviews.PaymentManagement)
+		enc := encoder(ctx, w)
+		body := NewGetResponseBody(res.Projected)
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeGetRequest returns a decoder for requests sent to the payment get
+// endpoint.
+func DecodeGetRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
+	return func(r *http.Request) (interface{}, error) {
+		var (
+			id     string
+			cartID string
+
+			params = mux.Vars(r)
+		)
+		id = params["ID"]
+		cartID = params["cartId"]
+		payload := NewGetPayload(id, cartID)
+
+		return payload, nil
+	}
+}
