# gen/http/payment/server/paths.go
@@ -1,0 +1,22 @@
+// Code generated by goa v3.1.3, DO NOT EDIT.
+//
+// HTTP request path constructors for the payment service.
+//
+// Command:
+// $ goa gen fruitshop/design
+
+package server
+
+import (
+	"fmt"
+)
+
+// AddPaymentPath returns the URL path to the payment service add HTTP endpoint.
+func AddPaymentPath(id string) string {
+	return fmt.Sprintf("/api/v1/payment/pay/%v", id)
+}
+
+// GetPaymentPath returns the URL path to the payment service get HTTP endpoint.
+func GetPaymentPath(id string, cartID string) string {
+	return fmt.Sprintf("/api/v1/payment/%v/%v", id, cartID)
+}
